# todo-mvp

./: CONTRIBUTING.md  README.md
acceptance_test/: README.md  acceptance_test.sh  golden_master.html
acceptance_test/ruby/: Gemfile  README.md  acceptance_test.rb  golden_master.html
acceptance_test/rust/acceptance_test/: Cargo.toml
acceptance_test/rust/acceptance_test/src/: main.rs
todos/django/: Pipfile
todos/django/templates/: home.html
todos/django/todomvp/: __init__.py  views.py
todos/elixir/: .gitignore  README.md  mix.exs
todos/elixir/config/: config.exs
todos/elixir/lib/: todo_mvp.ex
todos/elixir/test/: todo_mvp_test.exs
todos/flask/: .env  Pipfile
todos/flask/todomvp/: __init__.py  routes.py
todos/go/: Dockerfile  main.go  now.json  readme.md  template.html  todo.go
todos/go/static/: todo.css
todos/netcore/: .gitignore  README.md  Todos.sln
todos/netcore/AspNet/: AspNet.csproj  Program.cs  Startup.cs  appsettings.Development.json
todos/netcore/Common/: IndexTemplate.cs  Todo.cs  TodoList.cs
todos/netcore/HttpListener/: HttpListener.csproj  HttpServer.cs  Program.cs
todos/node.js/: .indium.json  template.html.js  todo.js
todos/php/: README.md  autoload.php  index.php  page.tpl.php
todos/php/classes/: controller.php  todo.php
todos/php/static/: todo.css
todos/ruby/: README.md  template.html.erb  todo.rb  todo_mvp.rb
todos/ruby/pages/: new_todo.html.erb  todo_list.html.erb
todos/rust/: Cargo.toml  README.md
todos/rust/src/: README.md  main.rs
todos/rust/src/resource/: todo.css
todos/rust/templates/: index.html
(+8 files in other folders)
