[package]
authors = ["deciduously <ben@deciduously.com>"]
edition = "2018"
name = "todo-mvp-rust"
version = "0.1.0"
[dependencies]
futures = "0.1"
hyper = "0.12"
lazy_static = "1.3"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7"
