[package]
authors = ["deciduously <ben@deciduously.com>"]
edition = "2018"
name = "todo-mvp-rust"
version = "0.1.1"

[dependencies]
anyhow = "1.0"
hyper = "0.13"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "1.0"

[dependencies.tokio]
features = ["full"]
version = "0.2"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"
